--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -8,7 +8,11 @@
     margin-left: -64%;
 }
 
-.main {
+/* .main {
     width: 100%;
     height: auto;
+} */
+
+.TaskList {
+    margin-top: -15%;
 }
