some positioning changes

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,18 +1,26 @@
 .textarea {
     margin-top: 10%;
-    margin-left: -70%;
+    margin-left: -62%;
+    margin-right: 2%;
 }
 
 .buttons {
     margin-top: -20%;
-    margin-left: -64%;
+    margin-left: -60%;
 }
 
-/* .main {
+.main {
     width: 100%;
     height: auto;
-} */
+}
 
 .TaskList {
+    width: 100%;
+    height: auto;
     margin-top: -15%;
+}
+
+.item {
+    width: 100%;
+    height: auto;
 }
