some positioning changes

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -12,12 +12,16 @@
 .main {
     width: 100%;
     height: auto;
+    margin-left: 10%;
+    margin-top: 5%;
 }
 
 .TaskList {
     width: 100%;
     height: auto;
     margin-top: -15%;
+    margin-left: 3%;
+    
 }
 
 .item {
